--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>Simple SPA</title><base href="/"><script defer="defer" src="./main.js"></script><link href="./main.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <title>Simple SPA</title>
+  <base href="/">
+  <script defer="defer" src="main.js"></script>
+  <link href="main.css" rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
+</html>
