remove base element from head

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Simple SPA</title>
-  <base href="/">
-  <script defer="defer" src="main.js"></script>
-  <link href="main.css" rel="stylesheet">
+  <script defer="defer" src="./main.js"></script>
+  <link href="./main.css" rel="stylesheet">
 </head>
 
 <body>
